--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
+.background {
+  min-height: 100vh;
+  border: 10px solid #2e2e2e;
+  border-radius: 10px;
+  
+}
 .App-header {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 60vh;
-  min-width: 100vw;
+  min-height: 50vh;
   color: white;
   text-align: center;
   font-size: 5em;
@@ -18,8 +23,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 30vh;
-  min-width: 100vw;
+  min-height: 10vh;
   color: white;
   text-align: center;
   font-size: 5vh;
